# master-vrp-van-laar

./: CMakeLists.txt  README.md  build-or-tools.sh  build.sh
data/: config.json
src/: cache.cpp  cache.h  day_solver.cpp  day_solver.h  first_schedule_middleman.cpp  first_schedule_solver.cpp  first_schedule_solver.h  first_solution_parser.cpp  first_solution_parser.h  inspiration.h  main.cpp  parse.h  penalties.cpp  penalties.h  routes_extract.cpp  routes_extract.h  sa.cpp  sa.h  schedule_state.cpp  schedule_state.h  seed.cpp  seed.h  seed_generators.cpp  seed_generators.h  seed_io.h  seed_scoring.cpp  seed_scoring.h  tests.h  types.h  utils.h  validation.cpp  validation.h
